# BlogIT-AI

./: app.py  config.py  database.py  main.py  models.py  oauth2.py  pyproject.toml  schemas.py  utils.py
alembic/: env.py
alembic/versions/: 44b0c9d845eb_trial.py  91b92aef3387_create_all_tables.py  ad86e40a5d93_added_phone_number.py  d05e29fad359_generate_migrations_ddl_for_posts_users_.py  df77dc9f1fd4_generate_migrations_for_all_tables.py  eaaf222e4654_removed_phone_number_column_from_posts_.py
router/: auth.py  posts.py  users.py  votes.py
